--- a/Stp/Base/Test/BUILD.gn
+++ b/Stp/Base/Test/BUILD.gn
@@ -184,6 +184,9 @@ test("BaseUnitTests") {
     "../Containers/SortingTest.cpp",
     # FIXME "../Containers/SpanTest.cpp",
     # TODO "Containers/StackTest.cpp",
+    "../Crypto/Crc32Test.cpp",
+    "../Crypto/Md5Test.cpp",
+    "../Crypto/Sha1Test.cpp",
 #    "../Exe/LibraryTest.cpp",
 #    "../FileSystem/DirectoryTest.cpp",
 #    "../FileSystem/FilePathTest.cpp",
@@ -201,9 +204,6 @@ test("BaseUnitTests") {
 #    "../Geometry/Vector2Test.cpp",
 #    "../Geometry/Vector3Test.cpp",
 #    "../Geometry/Xform3Test.cpp",
-    "../Hash/Crc32Test.cpp",
-    "../Hash/Md5Test.cpp",
-#    "../Hash/Sha1Test.cpp",
     "../Io/Base64Test.cpp",
     "../Io/TextWriterTest.cpp",
 
