--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -417,6 +417,13 @@ component("Base") {
     "Text/StringUtfConversions.h",
     "Text/SystemString.h",
     "Text/SystemStringWin.cpp",
+    "Text/TextDecoder.h",
+    "Text/TextEncoder.h",
+    "Text/TextEncoding.cpp",
+    "Text/TextEncoding.h",
+    "Text/TextEncodingFwd.h",
+    "Text/TextEncodingRegistry.cpp",
+    "Text/TextEncodingRegistry.h",
     "Text/Utf.cpp",
     "Text/Utf.h",
     "Text/Wtf.cpp",
@@ -430,12 +437,6 @@ component("Base") {
     "Text/Codec/Latin2Codec.cpp",
     "Text/Codec/Latin3Codec.cpp",
     "Text/Codec/Latin4Codec.cpp",
-    "Text/Codec/TextCodec.cpp",
-    "Text/Codec/TextCodec.h",
-#    "Text/Codec/TextCodecDatabase.cpp",
-    "Text/Codec/TextCodecDatabase.h",
-    "Text/Codec/TextDecoder.h",
-    "Text/Codec/TextEncoder.h",
     "Text/Codec/Utf16Codec.cpp",
     "Text/Codec/Utf32Codec.cpp",
     "Text/Codec/Utf8Codec.cpp",
