--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -39,12 +39,12 @@ component("Base") {
     "App/BaseApplicationPart.cpp",
     "App/BaseApplicationPart.h",
 
-#    "Call/Delegate.cpp",
-#    "Call/Delegate.h",
-#    "Call/DelegateFwd.h",
-#    "Call/Function.h",
-#    "Call/FunctionFwd.h",
-#    "Call/ObserverList.h",
+    "Call/Delegate.cpp",
+    "Call/Delegate.h",
+    "Call/DelegateFwd.h",
+    "Call/Function.h",
+    "Call/FunctionFwd.h",
+    "Call/ObserverList.h",
 
     "Compiler/ByteOrder.h",
     "Compiler/Config.h",
@@ -77,6 +77,7 @@ component("Base") {
     "Containers/InitializerList.h",
     "Containers/InlineList.h",
     "Containers/InlineListFwd.h",
+    "Containers/Join.h",
     "Containers/KeyValuePair.h",
     "Containers/LinkedList.h",
     "Containers/List.cpp",
@@ -156,10 +157,10 @@ component("Base") {
     "Error/SystemException.cpp",
     "Error/SystemException.h",
 
-#    "Exe/Library.cpp",
+    "Exe/Library.cpp",
     "Exe/Library.h",
-#    "Exe/LibraryPosix.cpp",
-#    "Exe/LibraryWin.cpp",
+    "Exe/LibraryPosix.cpp",
+    "Exe/LibraryWin.cpp",
 
     "Export.h",
     "ExportTemplate.h",
