refactor Random utilities

--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -94,6 +94,9 @@ component("Base") {
 
     "Crypto/Crc32.cpp",
     "Crypto/Crc32.h",
+    "Crypto/CryptoRandom.h",
+    "Crypto/CryptoRandomPosix.cpp",
+    "Crypto/CryptoRandomWin.cpp",
     "Crypto/Md5.cpp",
     "Crypto/Md5.h",
     "Crypto/Sha1.cpp",
@@ -300,15 +303,6 @@ component("Base") {
     "Process/NativeProcessPosix.cpp",
     "Process/NativeProcessWin.cpp",
 
-#    "Random/CryptoRandom.cpp",
-    "Random/CryptoRandom.h",
-#    "Random/CryptoRandomPosix.cpp",
-    "Random/CryptoRandomWin.cpp",
-    "Random/Random.cpp",
-    "Random/Random.h",
-    "Random/RandomInternal.h",
-    "Random/RandomShuffle.h",
-
     "Simd/Vnx.h",
     "Simd/VnxNeon.h",
     "Simd/VnxSse.h",
@@ -455,6 +449,8 @@ component("Base") {
     "Util/Flags.h",
     "Util/LazyInstance.cpp",
     "Util/LazyInstance.h",
+    "Util/Random.cpp",
+    "Util/Random.h",
     "Util/SwapBytes.h",
     "Util/Tuple.h",
     "Util/Version.cpp",
