--- a/Stp/Base/Test/BUILD.gn
+++ b/Stp/Base/Test/BUILD.gn
@@ -167,7 +167,6 @@ test("BasePerfTests") {
 test("BaseUnitTests") {
   sources = [
     "../App/AtExitTest.cpp",
-#    "../Byte/BytesTest.cpp",
     "../Call/DelegateTest.cpp",
     "../Call/FunctionTest.cpp",
     "../Call/ObserverListTest.cpp",
@@ -186,6 +185,7 @@ test("BaseUnitTests") {
     # TODO "Containers/StackTest.cpp",
     "../Crypto/Crc32Test.cpp",
     "../Crypto/Md5Test.cpp",
+    "../Crypto/CryptoRandomTest.cpp",
     "../Crypto/Sha1Test.cpp",
 #    "../Exe/LibraryTest.cpp",
 #    "../FileSystem/DirectoryTest.cpp",
@@ -193,34 +193,19 @@ test("BaseUnitTests") {
     # FIXME "FileSystem/FileTest.cpp",
     # FIXME "FileSystem/MemoryMappedFileTest.cpp",
     # FIXME "FileSystem/TemporaryDirectoryTest.cpp",
-#    "../Geometry/AffineTest.cpp",
-#    "../Geometry/CubicBezierTest.cpp",
-#    "../Geometry/Line2Test.cpp",
-#    "../Geometry/PlaneTest.cpp",
-#    "../Geometry/Quad2Test.cpp",
-#    "../Geometry/QuaternionTest.cpp",
-#    "../Geometry/RectTest.cpp",
-#    "../Geometry/Size2Test.cpp",
-#    "../Geometry/Vector2Test.cpp",
-#    "../Geometry/Vector3Test.cpp",
-#    "../Geometry/Xform3Test.cpp",
     "../Io/Base64Test.cpp",
     "../Io/TextWriterTest.cpp",
-
-#    "../Json/JsonParserTest.cpp",
-#    "../Json/JsonValueTest.cpp",
-#    "../Json/JsonFormatterTest.cpp",
 
     # FIXME "Linux/ProcMapsTest.cpp",
 
     "../Math/AlignmentTest.cpp",
-#    "../Math/BitsTest.cpp",
-#    "../Math/CommonFactorTest.cpp",
+    "../Math/BitsTest.cpp",
+    "../Math/CommonFactorTest.cpp",
 #    "../Math/FixedTest.cpp",
     "../Math/FloatToIntegerTest.cpp",
     "../Math/HalfTest.cpp",
     "../Math/NBitsTest.cpp",
-#    "../Math/PowerOfTwoTest.cpp",
+    "../Math/PowerOfTwoTest.cpp",
     "../Math/RawFloatTest.cpp",
     "../Math/SafeConversionsTest.cpp",
 #    "../Math/SafeTest.cpp",
@@ -230,8 +215,6 @@ test("BaseUnitTests") {
     "../Mem/OwnPtrTest.cpp",
     "../Mem/RefCountedTest.cpp",
     # FIXME "Mem/WeakPtrTest.cpp",
-#    "../Random/CryptoRandomTest.cpp",
-    "../Random/RandomTest.cpp",
     "../Simd/VnxTest.cpp",
     "../Sync/AtomicOpsTest.cpp",
     "../Sync/ConditionVariableTest.cpp",
@@ -265,6 +248,8 @@ test("BaseUnitTests") {
     "../Util/FinallyTest.cpp",
     "../Util/FlagsTest.cpp",
     "../Util/LazyInstanceTest.cpp",
+    "../Util/RandomTest.cpp",
+    "../Util/RandomUtilTest.cpp",
     "../Util/SwapBytesTest.cpp",
     "../Util/TupleTest.cpp",
     "../Util/VersionTest.cpp",
