Sync/ merge into Thread/

--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -307,28 +307,6 @@ component("Base") {
     "Simd/VnxNeon.h",
     "Simd/VnxSse.h",
 
-    "Sync/AtomicFlag.h",
-    "Sync/AtomicOps.h",
-    "Sync/AtomicOpsInternalsAtomicWordCompat.h",
-    "Sync/AtomicOpsInternalsPortable.h",
-    "Sync/AtomicOpsInternalsX86Msvc.h",
-    "Sync/AtomicRefCount.h",
-    "Sync/AtomicSequenceNum.h",
-    "Sync/ConditionVariable.h",
-    "Sync/ConditionVariablePosix.cpp",
-    "Sync/ConditionVariableWin.cpp",
-    "Sync/Lock.cpp",
-    "Sync/Lock.h",
-    "Sync/NativeLock.h",
-    "Sync/OneWriterSeqLock.cpp",
-    "Sync/OneWriterSeqLock.h",
-    "Sync/ReadWriteLock.h",
-    "Sync/SpinLock.cpp",
-    "Sync/SpinLock.h",
-    "Sync/WaitableEvent.h",
-#    "Sync/WaitableEventPosix.cpp",
-#    "Sync/WaitableEventWin.cpp",
-
     "System/CpuInfo.cpp",
     "System/CpuInfo.h",
     "System/Environment.cpp",
@@ -383,6 +361,19 @@ component("Base") {
     "ThirdParty/nspr/prtime.cpp",
     "ThirdParty/nspr/prtime.h",
 
+    "Thread/AtomicFlag.h",
+    "Thread/AtomicOps.h",
+    "Thread/AtomicOpsInternalsAtomicWordCompat.h",
+    "Thread/AtomicOpsInternalsPortable.h",
+    "Thread/AtomicOpsInternalsX86Msvc.h",
+    "Thread/AtomicRefCount.h",
+    "Thread/AtomicSequenceNum.h",
+    "Thread/ConditionVariable.h",
+    "Thread/ConditionVariablePosix.cpp",
+    "Thread/ConditionVariableWin.cpp",
+    "Thread/Lock.cpp",
+    "Thread/Lock.h",
+    "Thread/NativeLock.h",
     "Thread/NativeThread.h",
     "Thread/NativeThreadAndroid.cpp",
     "Thread/NativeThreadDarwin.mm",
@@ -391,6 +382,11 @@ component("Base") {
     "Thread/NativeThreadLocal.h",
     "Thread/NativeThreadPosix.cpp",
     "Thread/NativeThreadWin.cpp",
+    "Thread/OneWriterSeqLock.cpp",
+    "Thread/OneWriterSeqLock.h",
+    "Thread/ReadWriteLock.h",
+    "Thread/SpinLock.cpp",
+    "Thread/SpinLock.h",
     "Thread/Thread.cpp",
     "Thread/Thread.h",
     "Thread/ThreadChecker.cpp",
@@ -398,6 +394,9 @@ component("Base") {
     "Thread/ThreadExitWin.cpp",
     "Thread/ThreadLocal.cpp",
     "Thread/ThreadLocal.h",
+    "Thread/WaitableEvent.h",
+    "Thread/WaitableEventPosix.cpp",
+    "Thread/WaitableEventWin.cpp",
 
     "Time/ElapsedTimer.h",
     "Time/ThreadTicks.h",
