--- a/Stp/Base/Test/BUILD.gn
+++ b/Stp/Base/Test/BUILD.gn
@@ -216,12 +216,6 @@ test("BaseUnitTests") {
     "../Mem/RefCountedTest.cpp",
     # FIXME "Mem/WeakPtrTest.cpp",
     "../Simd/VnxTest.cpp",
-    "../Sync/AtomicOpsTest.cpp",
-    "../Sync/ConditionVariableTest.cpp",
-    "../Sync/LockTest.cpp",
-    "../Sync/OneWriterSeqLockTest.cpp",
-#    "../Sync/ReadWriteLockTest.cpp",
-#    "../Sync/WaitableEventTest.cpp",
     "../System/CpuInfoTest.cpp",
     "../System/EnvironmentTest.cpp",
 #    "../System/SysInfoTest.cpp",
@@ -230,6 +224,12 @@ test("BaseUnitTests") {
     "../Text/StringSpanTest.cpp",
 #    "../Text/StringTest.cpp",
     # FIXME "Text/UtfStringConversionsTest.cpp",
+    "../Thread/AtomicOpsTest.cpp",
+    "../Thread/ConditionVariableTest.cpp",
+    "../Thread/LockTest.cpp",
+    "../Thread/OneWriterSeqLockTest.cpp",
+    "../Thread/ReadWriteLockTest.cpp",
+    "../Thread/WaitableEventTest.cpp",
     "../Time/PrTimeTest.cpp",
     "../Time/ThreadTicksTest.cpp",
     "../Time/TimeDeltaTest.cpp",
