Mem -> Memory, Library -> System

--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -153,11 +153,6 @@ component("Base") {
     "Error/SystemException.cpp",
     "Error/SystemException.h",
 
-    "Exe/Library.cpp",
-    "Exe/Library.h",
-    "Exe/LibraryPosix.cpp",
-    "Exe/LibraryWin.cpp",
-
     "Export.h",
     "ExportTemplate.h",
 
@@ -267,18 +262,18 @@ component("Base") {
     "Math/SafeConversionsImpl.h",
     "Math/SaturatedMath.h",
 
-    "Mem/AddressOf.h",
-    "Mem/AlignedMalloc.cpp",
-    "Mem/AlignedMalloc.h",
-    "Mem/Allocate.h",
-    "Mem/LinearAllocator.cpp",
-    "Mem/LinearAllocator.h",
-    "Mem/OwnPtr.h",
-    "Mem/RefCounted.h",
-    "Mem/RefCountedThreadSafe.h",
-    "Mem/RefPtr.h",
-    "Mem/WeakPtr.cpp",
-    "Mem/WeakPtr.h",
+    "Memory/AddressOf.h",
+    "Memory/AlignedMalloc.cpp",
+    "Memory/AlignedMalloc.h",
+    "Memory/Allocate.h",
+    "Memory/LinearAllocator.cpp",
+    "Memory/LinearAllocator.h",
+    "Memory/OwnPtr.h",
+    "Memory/RefCounted.h",
+    "Memory/RefCountedThreadSafe.h",
+    "Memory/RefPtr.h",
+    "Memory/WeakPtr.cpp",
+    "Memory/WeakPtr.h",
 
     "Posix/EintrWrapper.h",
     "Posix/FileDescriptor.cpp",
@@ -305,6 +300,10 @@ component("Base") {
     "System/Environment.h",
     "System/EnvironmentPosix.cpp",
     "System/EnvironmentWin.cpp",
+    "System/Library.cpp",
+    "System/Library.h",
+    "System/LibraryPosix.cpp",
+    "System/LibraryWin.cpp",
 #    "System/SysInfo.cpp",
 #    "System/SysInfo.h",
 #    "System/SysInfoDarwin.mm",
