--- a/Stp/Base/Test/BUILD.gn
+++ b/Stp/Base/Test/BUILD.gn
@@ -184,7 +184,6 @@ test("BaseUnitTests") {
     "../Crypto/Md5Test.cpp",
     "../Crypto/CryptoRandomTest.cpp",
     "../Crypto/Sha1Test.cpp",
-#    "../Exe/LibraryTest.cpp",
 #    "../FileSystem/DirectoryTest.cpp",
 #    "../FileSystem/FilePathTest.cpp",
     # FIXME "FileSystem/FileTest.cpp",
@@ -207,14 +206,15 @@ test("BaseUnitTests") {
     "../Math/SafeConversionsTest.cpp",
 #    "../Math/SafeTest.cpp",
     "../Math/SaturatedMathTest.cpp",
-    "../Mem/AlignedMallocTest.cpp",
-    "../Mem/LinearAllocatorTest.cpp",
-    "../Mem/OwnPtrTest.cpp",
-    "../Mem/RefCountedTest.cpp",
-    # FIXME "Mem/WeakPtrTest.cpp",
+    "../Memory/AlignedMallocTest.cpp",
+    "../Memory/LinearAllocatorTest.cpp",
+    "../Memory/OwnPtrTest.cpp",
+    "../Memory/RefCountedTest.cpp",
+    # FIXME "Memory/WeakPtrTest.cpp",
     "../Simd/VnxTest.cpp",
     "../System/CpuInfoTest.cpp",
     "../System/EnvironmentTest.cpp",
+    "../System/LibraryTest.cpp",
 #    "../System/SysInfoTest.cpp",
     "../Text/AsciiCharTest.cpp",
     "../Text/FormatIntegerTest.cpp",
