--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -329,8 +329,8 @@ component("Base") {
     "Text/TextEncoder.h",
     "Text/TextEncoding.cpp",
     "Text/TextEncoding.h",
-    "Text/TextEncodingRegistry.cpp",
-    "Text/TextEncodingRegistry.h",
+    #"Text/TextEncodingRegistry.cpp",
+    #"Text/TextEncodingRegistry.h",
     "Text/Utf.cpp",
     "Text/Utf.h",
     "Text/Wtf.cpp",
@@ -338,15 +338,16 @@ component("Base") {
     "Text/Detail/StringDetail.cpp",
     "Text/Detail/StringDetail.h",
 
-    "Text/Codec/AsciiCodec.cpp",
-    "Text/Codec/Cp1252Codec.cpp",
-    "Text/Codec/Latin1Codec.cpp",
-    "Text/Codec/Latin2Codec.cpp",
-    "Text/Codec/Latin3Codec.cpp",
-    "Text/Codec/Latin4Codec.cpp",
-    "Text/Codec/Utf16Codec.cpp",
-    "Text/Codec/Utf32Codec.cpp",
-    "Text/Codec/Utf8Codec.cpp",
+    "Text/Codec/AsciiEncoding.cpp",
+    "Text/Codec/AsciiEncoding.h",
+    #"Text/Codec/Cp1252Codec.cpp",
+    #"Text/Codec/Latin1Codec.cpp",
+    #"Text/Codec/Utf16Encoding.cpp",
+    #"Text/Codec/Utf16Encoding.h",
+    "Text/Codec/Utf32Encoding.cpp",
+    "Text/Codec/Utf32Encoding.h",
+    "Text/Codec/Utf8Encoding.cpp",
+    "Text/Codec/Utf8Encoding.h",
 
     "ThirdParty/nspr/prtime.cpp",
     "ThirdParty/nspr/prtime.h",
