--- a/Stp/Base/Test/BUILD.gn
+++ b/Stp/Base/Test/BUILD.gn
@@ -170,6 +170,7 @@ test("BaseUnitTests") {
     "../Containers/ArrayTest.cpp",
     "../Containers/BinarySearchTest.cpp",
     "../Containers/BitArrayTest.cpp",
+    "../Containers/BufferTest.cpp",
     "../Containers/FlatMapTest.cpp",
     "../Containers/FlatSetTest.cpp",
     "../Containers/HashMapTest.cpp",
