--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -315,9 +315,9 @@ component("Base") {
     "Text/AsciiChar.h",
     "Text/AsciiString.cpp",
     "Text/AsciiString.h",
-    "Text/Format.cpp",
-    "Text/Format.h",
-    "Text/FormatFwd.h",
+    "Text/FormatMany.cpp",
+    "Text/FormatMany.h",
+    "Text/FormatManyFwd.h",
     "Text/FormatInteger.h",
     "Text/ParsingUtil.h",
     "Text/String.h",
