--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -319,7 +319,10 @@ component("Base") {
     "Text/FormatManyFwd.h",
     "Text/FormatInteger.h",
     "Text/ParsingUtil.h",
-    "Text/StringSpan.h",
+    "Text/String16.cpp",
+    "Text/String16.h",
+    "Text/StringAlgo.cpp",
+    "Text/StringAlgo.h",
     "Text/StringUtfConversions.h",
     "Text/TextDecoder.h",
     "Text/TextEncoder.h",
@@ -331,8 +334,6 @@ component("Base") {
     "Text/Utf.h",
     "Text/Wtf.cpp",
     "Text/Wtf.h",
-    "Text/Detail/StringDetail.cpp",
-    "Text/Detail/StringDetail.h",
 
     "Text/Codec/AsciiEncoding.cpp",
     "Text/Codec/AsciiEncoding.h",
