redefine Comparable and Allocate

--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -264,6 +264,7 @@ component("Base") {
     "Memory/AddressOf.h",
     "Memory/AlignedMalloc.cpp",
     "Memory/AlignedMalloc.h",
+    "Memory/Allocate.cpp",
     "Memory/Allocate.h",
     "Memory/LinearAllocator.cpp",
     "Memory/LinearAllocator.h",
@@ -405,7 +406,6 @@ component("Base") {
     "Type/Basic.h",
     "Type/Common.h",
     "Type/Comparable.h",
-    "Type/ComparableFwd.h",
     "Type/CVRef.h",
     "Type/Formattable.cpp",
     "Type/Formattable.h",
