rewrite Crypto and Debug

--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -106,10 +106,10 @@ component("Base") {
     "Debug/Debugger.h",
     "Debug/DebuggerPosix.cpp",
     "Debug/DebuggerWin.cpp",
+    "Debug/Location.cpp",
+    "Debug/Location.h",
     "Debug/Log.cpp",
     "Debug/Log.h",
-    "Debug/SourceLocation.cpp",
-    "Debug/SourceLocation.h",
 #    "Debug/StackTrace.cpp",
     "Debug/StackTrace.h",
     "Debug/StackTraceAndroid.cpp",
