--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -59,14 +59,12 @@ component("Base") {
     "Containers/Buffer.h",
     "Containers/BufferSpan.cpp",
     "Containers/BufferSpan.h",
-    "Containers/ContiguousAlgo.h",
     "Containers/FlatMap.h",
     "Containers/FlatSet.h",
     "Containers/HashMap.cpp",
     "Containers/HashMap.h",
     "Containers/HashSet.h",
     "Containers/InlineList.h",
-    "Containers/InlineListFwd.h",
     "Containers/Join.h",
     "Containers/KeyValuePair.h",
     "Containers/LinkedList.h",
@@ -79,6 +77,8 @@ component("Base") {
     "Containers/Sorting.h",
     "Containers/SortingBasic.h",
     "Containers/Span.h",
+    "Containers/SpanAlgo.h",
+    "Containers/SpanCompare.h",
     "Containers/SpanFwd.h",
     "Containers/Stack.h",
 
