--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -231,14 +231,11 @@ component("Base") {
     "Linux/Xdg.cpp",
     "Linux/Xdg.h",
 
-    "Math/Abs.cpp",
-    "Math/Abs.h",
     "Math/Alignment.h",
     "Math/Bcd.h",
     "Math/Bits.cpp",
     "Math/Bits.h",
     "Math/BitsImpl.h",
-    "Math/BitsShift.h",
     "Math/CommonFactor.h",
     "Math/Fixed.cpp",
     "Math/Fixed.h",
@@ -249,6 +246,8 @@ component("Base") {
     "Math/Math.h",
     "Math/MathConstants.h",
     "Math/Multiple.h",
+    "Math/Near.cpp",
+    "Math/Near.h",
     "Math/NBits.h",
     "Math/OverflowMath.h",
     "Math/PowerOfTwo.h",
