on-going work for new String

--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -70,17 +70,13 @@ component("Base") {
     "Containers/LinkedList.h",
     "Containers/List.cpp",
     "Containers/List.h",
-    "Containers/ListFwd.h",
     "Containers/LruCache.h",
-    "Containers/MapFwd.h",
     "Containers/SinglyLinkedList.h",
     "Containers/Sorting.h",
     "Containers/SortingBasic.h",
-    "Containers/Span.cpp",
     "Containers/Span.h",
     "Containers/SpanAlgo.h",
     "Containers/SpanCompare.h",
-    "Containers/SpanFwd.h",
     "Containers/Stack.h",
 
     "Crypto/Crc32.cpp",
@@ -145,7 +141,6 @@ component("Base") {
     "Error/ErrorCode.h",
     "Error/Exception.cpp",
     "Error/Exception.h",
-    "Error/ExceptionFwd.h",
     "Error/ExceptionPtr.h",
     "Error/SystemErrorCode.h",
     "Error/SystemException.cpp",
@@ -291,6 +286,10 @@ component("Base") {
     "Simd/Vnx.h",
     "Simd/VnxNeon.h",
     "Simd/VnxSse.h",
+    
+    "String/String.h",
+    "String/StringSpan.cpp",
+    "String/StringSpan.h",
 
     "System/CpuInfo.cpp",
     "System/CpuInfo.h",
@@ -406,7 +405,6 @@ component("Base") {
     "Type/CVRef.h",
     "Type/Formattable.cpp",
     "Type/Formattable.h",
-    "Type/FormattableFwd.h",
     "Type/Hashable.cpp",
     "Type/Hashable.h",
     "Type/IntegerSelection.h",
